k8s/mongodb-restaurant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-restaurant
  namespace: zomato-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-restaurant
  template:
    metadata:
      labels:
        app: mongodb-restaurant
    spec:
      containers:
      - name: mongodb
        image: mongo:7
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
        livenessProbe:
          exec:
            command:
              - mongosh
              - --eval
              - db.adminCommand('ping')
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-restaurant-pvc
