k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zomato-nginx
  namespace: zomato-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zomato-nginx
  template:
    metadata:
      labels:
        app: zomato-nginx
    spec:
      containers:
      - name: nginx
        image: vero026/zomato-nginx:latest
        ports:
        - containerPort: 80
