k8s/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: zomato-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: vero026/zomato-order-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8003
