k8s/restaurant-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
  namespace: zomato-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
      - name: restaurant-service
        image: vero026/zomato-restaurant-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8002
