k8s/mongodb-restaurant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-restaurant
  namespace: zomato-dev
spec:
  selector:
    app: mongodb-restaurant
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
