k8s/mongodb-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-user
  namespace: zomato-dev
spec:
  selector:
    app: mongodb-user
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
