k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: zomato-dev
spec:
  selector:
    app: order-service
  ports:
    - port: 8003
      targetPort: 8003
  type: ClusterIP
