k8s/restaurant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: zomato-dev
spec:
  selector:
    app: restaurant-service
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
