k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: zomato-dev
spec:
  selector:
    app: user-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
